--- a/cayez_reposteria/main/main.css
+++ b/cayez_reposteria/main/main.css
@@ -1,7 +1,3 @@
-#menu {
-    background-color: #000;
-}
-
 #menu ul {
     list-style: none;
     margin: 0%;
@@ -13,12 +9,12 @@
 }
 
 #menu ul li a {
-    color: white;
+    color: rgb(0, 0, 0);
     display: block;
     padding: 20px 40px;
     text-decoration: none;
 }
 
 #menu ul li a:hover {
-    background-color: #42B881;
+    background-color: rgb(255, 187, 197);
 }
